containers/response-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  response
  labels:
    app: response
    service: response
spec:
  selector:
    app:  response
  ports:
    - port: 8080
